[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Rhythm/RhythmWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Rhythm/Camera.gd" type="Script" id=2]
[ext_resource path="res://src/Rhythm/UI/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Rhythm/World3D.gd" type="Script" id=4]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 10, 20 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_unshaded = true
albedo_texture = SubResource( 2 )

[node name="World3D" type="Spatial"]
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1000, 2000 )

[node name="RhythmWorld" parent="Viewport" instance=ExtResource( 1 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 4.37114e-08, 1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.890062, 0.45584, 0, -0.45584, 0.890062, 0, 4.1626, 12.7881 )
script = ExtResource( 2 )

[node name="PosA" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 7 )

[node name="PosB" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 7 )

[node name="PosC" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 7 )

[node name="PosD" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 7 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Health" parent="UILayer" instance=ExtResource( 3 )]
